fixes to remove locales from links

--- a/learn-certs-pr/courses/20345-1.yml
+++ b/learn-certs-pr/courses/20345-1.yml
@@ -37,7 +37,7 @@ summary: |-
   #### Профиль аудитории
   Аудитория этого курса - администраторы обмена сообщениями корпоративного уровня на сервере Exchange. Этот курс могут также пройти специалисты по ИТ и специалисты службы поддержки, желающие узнать об Exchange Server. Для прохождения этого курса, слушателям необходимо иметь минимум два года опыта работы в области информационных технологий, как правило, в области администрирования Windows Server, сетевого администрирования, службы поддержки или системного администрирования. Также ожидается, что они имеют некоторый опыт работы с концепциями Exchange Server, но предыдущий опыт управления Exchange Server не является обязательным.
 prerequisitesSection: |-
-  - В дополнение к своему профессиональному опыту слушатели данного курса должны обладать следующими техническими знаниями&#58; 
+  В дополнение к своему профессиональному опыту слушатели данного курса должны обладать следующими техническими знаниями&#58; 
   - Минимум два года опыта администрирования Windows Server
   - Минимум два года опыта работы с доменными службами Active Directory (AD DS)
   - Минимум два года опыта работы с разрешением имен, включая систему доменных имен (DNS)
