--- a/learn-certs-pr/courses/40409.yml
+++ b/learn-certs-pr/courses/40409.yml
@@ -42,7 +42,7 @@ prerequisitesSection: |-
   - Возможность мониторинга и устранения неполадок в Skype for Business Server 2015 на базовом уровне с помощью инструментов мониторинга и устранения неполадок Microsoft (Snooper, централизованная служба ведения журналов (CLS), ключевые показатели состояния (KHI)).
   - Навыки для работы с доменными службами Active Directory, сетями передачи данных, доменными службами Azure Active Directory, синхронизацией каталогов, телекоммуникационными стандартами и сетевыми компонентами, которые поддерживают настройку и развертывание архитектур Skype for Business.
   - Знание требований и процесса интеграции Skype for Business Server 2015 с Microsoft Exchange Server и Office 365.
-  - Знание следующих технологий&#58; Windows, Windows Server и Hyper-V, QoS, TCP/IP, балансировка сетевой нагрузки, PowerShell, понимание протокола инициации сеанса (SIP) ( (базовые концепции телефонии, включая транкинг SIP, шлюз и контроллер границы сеанса ( SBC) межкомпонентные соединения и архитектуры развертывания общих АТС).
+  - Знание следующих технологий&#58; Windows, Windows Server и Hyper-V, QoS, TCP/IP, балансировка сетевой нагрузки, PowerShell, понимание протокола инициации сеанса (SIP) базовые концепции телефонии, включая транкинг SIP, шлюз и контроллер границы сеанса (SBC) межкомпонентные соединения и архитектуры развертывания общих АТС.
 outlineSection: |-
   ### Модуль 1&#58; Введение в голосовую нагрузку
   Разработка голосового решения на базе Skype for Business требует понимания многих технологий.  С последними голосовыми сервисами Microsoft на основе облачных решений, клиенты получают большую гибкость при развертывании голосового решения для своего предприятия, но для таких решений существуют свои особенности применения, которые важно понимать. В этом модуле рассказано об основных понятиях VoIP, эволюции ранних технологий телефонии, а также служб Office 365 и вкладе Microsoft в мир голосовой связи.  Дополнительно в модуле рассмотрены возможности Skype for Business Online и Skype for Business Server.
@@ -139,7 +139,7 @@ outlineSection: |-
   - Настройка политик голосовой связи, использования PSTN и маршрутов
   - Добавление пользователей в абонентские группы и назначение политик
   - Тестирование маршрутизации голоса
-  - Настройка абонентской группы «Лондон»
+  - Настройка абонентской группы Лондон
 
   После завершения этого модуля студенты смогут&#58;
   - Разрабатывать и внедрять Skype for Business Enterprise Voice.
@@ -164,7 +164,7 @@ outlineSection: |-
 
 
   #### Лабораторная работа&#58; Настройка взаимодействия с IP-PBX
-  - Настройка корпоративной голосовой связи для группы «Лондон»
+  - Настройка корпоративной голосовой связи для группы Лондон
   - Настройка межтранковой маршрутизации
   - Изучение настроек интеграции Skype for Business Server 2015 
   - Настройки интеграции с IP-PBX 
@@ -186,12 +186,12 @@ outlineSection: |-
 
 
   #### Лабораторная работа&#58; Потоки вызовов и управляемость
-  - * Упражнение 1&#58; Тестирование текущего решения со звонками через локальную АТС
-  - * Упражнение 2&#58; Подключение облачной АТС с локальной связью через PSTN 
-  - * Упражнение 3&#58; Тестирование облачной АТС с локальной связью через PSTN 
+  - *Упражнение 1&#58; Тестирование текущего решения со звонками через локальную АТС
+  - *Упражнение 2&#58; Подключение облачной АТС с локальной связью через PSTN 
+  - *Упражнение 3&#58; Тестирование облачной АТС с локальной связью через PSTN 
 
   После завершения этого модуля студенты смогут&#58;
-  - * Объяснять облачные АТС с локальной архитектурой и сценариями подключения к PSTN 
+  - *Объяснять облачные АТС с локальной архитектурой и сценариями подключения к PSTN 
 
 
   ### Модуль 8&#58; Облачная АТС с локальной связью через PSTN и Cloud Connector Edition
