--- a/learn-certs-pr/courses/az-400t03.yml
+++ b/learn-certs-pr/courses/az-400t03.yml
@@ -52,7 +52,7 @@ summary: |-
 prerequisitesSection: |-
   Фундаментальные знания о Azure, управлении версиями, разработке Agile software и основных принципах разработки программного обеспечения. Опыт в организации, которая поставляет программное обеспечение, был бы желателен.
 outlineSection: |-
-  ### Модуль 1&#58;. Разработка стратегии выпуска
+  ### Модуль 1&#58; Разработка стратегии выпуска
   #### Уроки
   - Введение в непрерывную доставку
   - Рекомендации по стратегии выпуска
