--- a/learn-certs-pr/courses/ms-101t02.yml
+++ b/learn-certs-pr/courses/ms-101t02.yml
@@ -111,4 +111,4 @@ outlineSection: |-
 
 
   #### Лабораторная работа&#58; Проверьте свои политики управления данными
-  - Exercise 1&#58; Исследуйте ваши данные Microsoft 365
+  - Упражнение 1&#58; Исследуйте ваши данные Microsoft 365
