--- a/learn-certs-pr/microsoft-certified-educator.yml
+++ b/learn-certs-pr/microsoft-certified-educator.yml
@@ -38,7 +38,7 @@ resources:
   href: https://education.microsoft.com/GetTrained/ITL-Research
 - title: Учебно-методическое пособие
   description: Поиск учебных материалов для подготовки к экзамену
-  href: http://aka.ms/MCEStudyGuide
+  href: https://aka.ms/MCEStudyGuide
 - title: Повтор экзамена
   description: Набор материалов в электронном виде для компании Teach the Future Now (плакат, рекламный проспект и предметная область знаний для экзамена MCE)
-  href: http://aka.ms/MCEAssets
+  href: https://aka.ms/MCEAssets
